# haskell-mpv

./: .gitignore  LICENSE  README.md  mpv.cabal
csrc/: mpv_helpers.c
src/Codec/: MPV.hs
src/Codec/MPV/: CAPI.hs  Chan.hs  Commands.hs  Core.hs  Events.hs  Simple.hs  Types.hs
